--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 ﻿#
+**/_compile/**
+!robots.txt
 .buildpath
-.DS_Store
 .idea
 .project
 .settings
+/config/config.php
+/logs/**
+/tmp/**
 composer.lock
 vendor
-**/_compile/**
-/tmp/**
-!robots.txt
-/config/config.php
